Add title to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<h1>My First Page</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>A whale of a greeting</title>
+</head>
+A Whale of a Greeting <h1>My First Page</h1>
 
 <p>Call me Ishmael.</p>
 
