--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A whale of a greeting</title>
 </head>
-A Whale of a Greeting <h1>My First Page</h1>
-
-<p>Call me Ishmael.</p>
+<body>
+    <h1>My First Page</h1>
+    <p>Call me Ishmael.</p>
+</body>
+</html>
 
 
